[package]
name = "rust-ethereum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.9"
ethers = { git = "https://github.com/cassc/ethers-rs", default-features = false, features = ["legacy"] }
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }
