[package]
name = "rust-ethereum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.9", features = ["derive"]}
# ethers = { path = "../ethers-rs", default-features = false, features = ["legacy"] }
# ethers-solc = { path = "../ethers-rs/ethers-solc", features = ["full", "rustls"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["legacy"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", features = ["full"] }
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[[bin]]
name = "part-1"
path="src/simple_transactions.rs"


[[bin]]
name = "part-2"
path="src/contract_deploy.rs"
